cleanup, updating doc, minor fixes

--- a/docs/wrapper/Extensions.ipynb
+++ b/docs/wrapper/Extensions.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "h5tbx.use('cflike')"
    ]
   },
   {
@@ -38,7 +39,7 @@
     "from typing import Tuple\n",
     "\n",
     "# register a property with setter and getter method:\n",
-    "@h5tbx.wrapper.register_special_property(h5tbx.wrapper.h5file.H5Dataset, overwrite=True)\n",
+    "@h5tbx.conventions.register_hdf_attr(h5tbx.wrapper.cflike.H5Dataset, overwrite=True, name='username')\n",
     "class username:\n",
     "    \"\"\"User Name Property. Requires name and ORCID\"\"\"\n",
     "\n",
@@ -83,7 +84,7 @@
     "    try:\n",
     "        ds.username = 'Second User'\n",
     "    except ValueError as e :\n",
-    "        print(e)\n",
+    "        print(f'Could not add user due to: {e}')\n",
     "    print(ds.username)\n",
     "    h5.dump()"
    ]
@@ -104,7 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@h5tbx.wrapper.register_special_dataset('device', h5tbx.wrapper.h5file.H5Dataset, overwrite=True)\n",
+    "from h5rdmtoolbox.wrapper.accessory import register_special_dataset\n",
+    "@register_special_dataset('device', h5tbx.H5File.H5Dataset(), overwrite=True)\n",
     "class DeviceProperty:\n",
     "    \"\"\"Device Accessor class\"\"\"\n",
     "\n",
@@ -130,6 +132,7 @@
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='standard_test')\n",
+    "    print(type(ds))\n",
     "    ds.device.add('my device')\n",
     "    print(ds.device.name)"
    ]
@@ -166,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(h5tbx.wrapper.h5file.H5Dataset):\n",
+    "class MyDataset(h5tbx.wrapper.core.H5Dataset):\n",
     "    def __repr__(self):\n",
     "        return f'{self.name}\\n{self.attrs}'\n",
     "    \n",
@@ -191,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyGroup(h5tbx.wrapper.h5file.H5Group):\n",
+    "class MyGroup(h5tbx.wrapper.core.H5Group):\n",
     "    \n",
     "    def get_all_datasets(self):\n",
     "        \"\"\"returns all datasets of this group\"\"\"\n",
@@ -224,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyWrapper(h5tbx.H5File, MyGroup):\n",
+    "class MyWrapper(h5tbx.wrapper.core.H5File, MyGroup):\n",
     "    \n",
     "    def set_user(self, user_name):\n",
     "        self.attrs.modify('user', user_name)"
@@ -319,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = gg.create_dataset('hello', user='test user', shape=(2,3), units='', long_name='a long name', overwrite=True)"
+    "ds = gg.create_dataset('hello', shape=(2,3), user='Max', overwrite=True)"
    ]
   },
   {
@@ -340,6 +343,26 @@
    "outputs": [],
    "source": [
     "type(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e14dedfa-bbf8-44e1-891e-e0455da3c70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5.set_user('new_user')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2df29018-f4d3-477b-bed3-a470514a0bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5"
    ]
   }
  ],
