--- a/docs/wrapper/DatasetCreation.ipynb
+++ b/docs/wrapper/DatasetCreation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Dataset creation\n",
     "\n",
-    "Dataset creation works almost as known from `h5py`. However, to achieve FAIRness, some additional parameters are mandatory, others new ones are optional. These together with optional parameters and additional features are explained here. It is worth noting, that the return value of sliced HDF5 datasets through the `h5rdmtoolbox` are `xarray` objects rather than `numpy` objects. This can is the default setting although can be pypassed. In any case it is worth checking out the `xarray` package [here](https://docs.xarray.dev/en/stable/)."
+    "Dataset creation works almost as known from `h5py`. However, to facilitate and streamline the work with HDF5 files further some featurs are added. Note, that `xarray` objects are returned when [slicing datasets](./DatasetSlicing.ipynb), thus passing `units` and `long_name` as attributes is worth considering to make the most of it."
    ]
   },
   {
@@ -19,7 +19,9 @@
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "h5tbx.use(None)"
    ]
   },
   {
@@ -27,9 +29,7 @@
    "id": "a6baa8c7-9bc8-4c45-9632-9322c72cda9d",
    "metadata": {},
    "source": [
-    "Mandatory parameters during dataset creation know fro `h5py` are `name`, `data` or `shape`. The toolbox adds new obligatory parameters: `standard_name` or `long_name` and a physical unit parameter, called `units`. These add miminaml required information to raw values.\n",
-    "\n",
-    "The user may select between `standard_name` and `long_name`. The latter is a human-readable (short) description of the dataset without any syntax restriction:"
+    "Mandatory parameters during dataset creation know fro `h5py` are `name`, `data` or `shape`. Additionally, attributes can be passed during dataset creation right away:"
    ]
   },
   {
@@ -41,35 +41,8 @@
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.create_dataset('x', shape=(4,),\n",
-    "                      units='m', long_name='coordinate in x direction')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14815caa-c443-4423-98d7-393378da8756",
-   "metadata": {},
-   "source": [
-    "Standard names are defined in a [standard name table](./Conventions.ipynb) and underly certain synatx rues, e.g. no spaces are allowed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "326f200b-6188-4327-b3e9-2290f7969c8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5File() as h5:\n",
-    "    h5.create_dataset('x', shape=(4,),\n",
-    "                      units='m', standard_name='x_coordinate')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f22c2e3-05a3-4b29-bce1-61e6ae9e1a1b",
-   "metadata": {},
-   "source": [
-    "**Note**: If the data is unitless, pass `units=''`"
+    "                      attrs=dict(description='x coordinate'))\n",
+    "    h5.dump()"
    ]
   },
   {
@@ -88,8 +61,8 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File() as h5:\n",
-    "    h5.create_dataset('grp/subgrp/x', shape=(4,),\n",
-    "                      units='m', standard_name='x_coordinate')"
+    "    h5.create_dataset('grp/subgrp/x', shape=(4,))\n",
+    "    h5.dump()"
    ]
   },
   {
@@ -114,11 +87,12 @@
     "fname_dimcales = h5tbx.generate_temporary_filename()\n",
     "with h5tbx.H5File(fname_dimcales, 'w') as h5:\n",
     "    h5.create_dataset('time', data=[0,1,2,3,4,5],\n",
-    "                      units='s', standard_name='time', make_scale=True)\n",
+    "                      make_scale=True,\n",
+    "                      attrs={'units': 's'})\n",
     "    h5.create_dataset('pressure', data=np.random.rand(6),\n",
-    "                      units='Pa', standard_name='time', attach_scale=((h5['time'])))\n",
-    "    p = h5.pressure[:]\n",
-    "p"
+    "                      attach_scale=((h5['time'])),\n",
+    "                      attrs={'units': 'Pa'})\n",
+    "    h5.dump()"
    ]
   },
   {
@@ -137,13 +111,10 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File(fname_dimcales, 'r+') as h5:\n",
-    "    h5.create_dataset('x', data=5.32, units='m',\n",
-    "                      standard_name='x_coordinate')\n",
-    "    h5.create_dataset('y', data=-3.1, units='m',\n",
-    "                      standard_name='y_coordinate')\n",
+    "    h5.create_dataset('x', data=5.32)\n",
+    "    h5.create_dataset('y', data=-3.1)\n",
     "    h5['pressure'].attrs['COORDINATES'] = ('x', 'y')\n",
-    "    p = h5.pressure[:]\n",
-    "p"
+    "    h5.dump()"
    ]
   },
   {
@@ -195,7 +166,7 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File() as h5:\n",
-    "    h5.create_dataset('ds', shape=(10, ), units='', attrs=dict(long_name='a long name', anothera='another attr'))  # unitless dataset. long_name is passed via parameter attrs"
+    "    h5.create_dataset('ds', shape=(10, ), attrs=dict(long_name='a long name', anothera='another attr'))  # unitless dataset. long_name is passed via parameter attrs"
    ]
   },
   {
@@ -214,8 +185,8 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File() as h5:\n",
-    "    h5.create_dataset('x', data=[1,2,3], units='m', standard_name='x_coordinate', make_scale=True)\n",
-    "    h5.create_dataset('t', data=[20.1, 18.5, 24.7], units='degC', standard_name='temperature', attach_scale=h5['x'])\n",
+    "    h5.create_dataset('x', data=[1,2,3], attrs=dict(units='m', standard_name='x_coordinate'), make_scale=True)\n",
+    "    h5.create_dataset('t', data=[20.1, 18.5, 24.7], attrs=dict(units='degC', standard_name='temperature'), attach_scale=h5['x'])\n",
     "    print(h5.t.x)  # note, that you can access the dimension scale using attribute-style-syntax\n",
     "    h5.dump()"
    ]
