--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -24,7 +24,9 @@
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox.config import set_config_parameter\n",
     "\n",
-    "h5tbx.use('cflike')"
+    "h5tbx.use('cflike')\n",
+    "\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -42,7 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_hdf_filenames = tutorial.Database.generate_test_files()"
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.attrs['project'] = 'tutorial'\n",
+    "    h5.create_dataset('velocity', data=[1,2,-1], units='m/s', standard_name='x_velocity')\n",
+    "    g = h5.create_group('sub')\n",
+    "    g.create_dataset('velocity', data=[4,0,-3,12,3], units='m/s', standard_name='x_velocity')\n",
+    "    h5.dump()\n",
+    "    filename = h5.hdf_filename"
    ]
   },
   {
@@ -61,10 +69,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File(list_of_hdf_filenames[0]) as h5:\n",
-    "    print(h5.find({'$basename': 'ptot'}, '$dataset'))\n",
-    "    print(h5.find({'$name': '/operation_point/ptot'}, '$dataset'))\n",
-    "    print(h5.find({'$basename': 'operation_point'}, '$group'))"
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print('find basename=velocity in root:')\n",
+    "    pprint(h5.find({'$basename': 'velocity'}, '$dataset'))\n",
+    "    \n",
+    "    print('\\nfind name=/velocity in root:')\n",
+    "    pprint(h5.find({'$name': '/velocity'}, '$dataset'))\n",
+    "    \n",
+    "    print('\\nfind name=/sub/velocity in root:')\n",
+    "    pprint(h5.find({'$name': '/sub/velocity'}, '$dataset'))\n",
+    "    \n",
+    "    print('\\nfind basename=velocity in sub/:')\n",
+    "    pprint(h5['sub'].find({'$basename': 'velocity'}, '$dataset', rec=False))\n",
+    "    \n",
+    "    print('\\nfind basename=velocity in root:')\n",
+    "    pprint(h5.find({'$basename': 'velocity'}, '$dataset', rec=False))\n",
+    "    \n",
+    "    print('\\nfind basename=velocity in root:')\n",
+    "    pprint(h5.find({'$basename': 'velocity'}, '$dataset', rec=True))\n",
+    "    \n",
+    "    # print(h5.find({'$name': '/operation_point/ptot'}, '$dataset'))\n",
+    "    # print(h5.find({'$basename': 'operation_point'}, '$group'))"
    ]
   },
   {
@@ -82,8 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File(list_of_hdf_filenames[0]) as h5:\n",
-    "    print(h5.find_one({'$basename': 'ptot'}, '$dataset'))"
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    pprint(h5.find_one({'$basename': 'velocity'}, '$dataset'))"
    ]
   },
   {
@@ -101,45 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File(list_of_hdf_filenames[0]) as h5:\n",
-    "    print(h5.find({'$shape': (100,)}, '$dataset'))\n",
-    "    print(h5.find({'$ndim': 1}, '$dataset'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03d4ce23-61d0-4550-af60-e4230d54614d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5File(list_of_hdf_filenames[0]) as h5:\n",
-    "    print(h5.find_one({'$basename': 'ptot'}, '$dataset'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1215d0ee-b757-4762-bcab-20111db7ed8f",
-   "metadata": {},
-   "source": [
-    "## H5Files - Accessing multiple HDF files\n",
-    "\n",
-    "This concepts assumes that we already know the HDF files. This might be a result from above"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "090acaf7-f3f6-408e-9f94-e595f07ea4c7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5Files(*list_of_hdf_filenames[0:2]) as h5files:\n",
-    "    print(h5files.keys())\n",
-    "    h5files[0].dump()\n",
-    "    h5files[1].dump()"
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    pprint(h5.find({'$shape': (5,)}, '$dataset'))\n",
+    "    pprint(h5.find({'$ndim': 1}, '$dataset'))"
    ]
   },
   {
