--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0ec5083-bfc0-46b9-9627-299cbd842838",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3b363c60-21f7-408f-89b6-7fc9a77a6d3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp0.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "h5 = h5tbx.H5File()  # note, not passing `mode` while the filename does not exist: 'r+' is used, otherwise defaultis 'r'\n",
     "h5.close()\n",
@@ -37,10 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "91fbac7b-de16-451b-a498-ef5af6f88529",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp2.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "h5 = h5tbx.H5File()  # note, not passing `mode` while the filename does not exist: 'r+' is used, otherwise defaultis 'r'\n",
     "h5.close()\n",
@@ -59,12 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34b7e026-3f38-494c-bd86-17c786c3ecbb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
     "    print(h5.hdf_filename.name)\n",
@@ -73,29 +97,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f791ac1e-7710-4b7f-91ec-77f1975ec29f",
+   "id": "48435b36-4615-4418-83fd-da302b937f80",
    "metadata": {},
    "source": [
-    "## Default content and content exploration\n",
-    "\n",
-    "Whenever a file is created, some default attributes are written to it. When can check the content by \"dumping\" the content to the screen by callind `dump()`. An interactive html representation of the file content is displayed. At the moment only attributes at the root level exist. They were created when the file was opened in write mode. While `creation_time` is considered as regular \"attribute\" `__h5rdmtoolbox_version__` and `__wrcls__` - attributes starting and ending with `__` - are special attributes reserved/used by the package."
+    "To inspect the file content, please visit the [file content visualization notebook](DumpFile.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3df83e0e-be6d-4884-8714-99d710eb5302",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5File() as h5file:  # default mode is 'r+'\n",
-    "    h5file.dump()   # call .sdump() outside of notebooks to get a similar but non-interactive representation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a77baa7-bb58-4382-9212-8f1f9c89b10c",
+   "id": "f4d8a079-04aa-4b88-b77b-70ca09f0861c",
    "metadata": {},
    "outputs": [],
    "source": []
